backend/dqml/parser/DMQLParser.py
# Generated from DMQL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DMQLParser ( Parser ):

    grammarFileName = "DMQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'='", "<INVALID>", "'>'", "'<'", "'>='", 
                     "'<='", "'+'", "'-'", "'*'", "'/'", "'('", "')'", "','", 
                     "'.'", "';'" ]

    symbolicNames = [ "<INVALID>", "USE", "DATABASE", "RELEVANCE", "TO", 
                      "FROM", "WHERE", "GROUP", "BY", "ORDER", "ASC", "DESC", 
                      "MINE", "WITH", "DISPLAY", "AS", "AND", "OR", "NOT", 
                      "IN", "BETWEEN", "LIKE", "IS", "TRUE", "FALSE", "NULL", 
                      "CLUSTER", "ASSOCIATION_RULES", "ANOMALIES", "ANOMALY_DETECTION", 
                      "STATISTICS", "CLASSIFICATION", "REGRESSION", "TARGET", 
                      "KPARAM", "CONFIDENCE", "SUPPORT", "LIFT", "THRESHOLD", 
                      "CONFIDENCE_LEVEL", "COUNT", "SUM", "AVG", "MIN", 
                      "MAX", "TABLE", "BAR_CHART", "LINE_CHART", "SCATTER_PLOT", 
                      "HEATMAP", "PIE_CHART", "HISTOGRAM", "BOX_PLOT", "EQ", 
                      "NEQ", "GT", "LT", "GTE", "LTE", "PLUS", "MINUS", 
                      "STAR", "SLASH", "LPAREN", "RPAREN", "COMMA", "DOT", 
                      "SEMICOLON", "INT", "FLOAT", "STRING", "IDENTIFIER", 
                      "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_query = 0
    RULE_useClause = 1
    RULE_relevanceClause = 2
    RULE_fromClause = 3
    RULE_whereClause = 4
    RULE_groupByClause = 5
    RULE_orderByClause = 6
    RULE_mineClause = 7
    RULE_withClause = 8
    RULE_displayClause = 9
    RULE_attributeList = 10
    RULE_attribute = 11
    RULE_relationList = 12
    RULE_relation = 13
    RULE_orderList = 14
    RULE_orderItem = 15
    RULE_condition = 16
    RULE_comparisonCondition = 17
    RULE_inCondition = 18
    RULE_betweenCondition = 19
    RULE_likeCondition = 20
    RULE_isNullCondition = 21
    RULE_comparisonOperator = 22
    RULE_expression = 23
    RULE_aggregateFunction = 24
    RULE_value = 25
    RULE_valueList = 26
    RULE_miningOperation = 27
    RULE_clusterOperation = 28
    RULE_associationRulesOperation = 29
    RULE_anomalyOperation = 30
    RULE_statisticsOperation = 31
    RULE_classificationOperation = 32
    RULE_regressionOperation = 33
    RULE_interestMeasure = 34
    RULE_measureItem = 35
    RULE_displayType = 36

    ruleNames =  [ "query", "useClause", "relevanceClause", "fromClause", 
                   "whereClause", "groupByClause", "orderByClause", "mineClause", 
                   "withClause", "displayClause", "attributeList", "attribute", 
                   "relationList", "relation", "orderList", "orderItem", 
                   "condition", "comparisonCondition", "inCondition", "betweenCondition", 
                   "likeCondition", "isNullCondition", "comparisonOperator", 
                   "expression", "aggregateFunction", "value", "valueList", 
                   "miningOperation", "clusterOperation", "associationRulesOperation", 
                   "anomalyOperation", "statisticsOperation", "classificationOperation", 
                   "regressionOperation", "interestMeasure", "measureItem", 
                   "displayType" ]

    EOF = Token.EOF
    USE=1
    DATABASE=2
    RELEVANCE=3
    TO=4
    FROM=5
    WHERE=6
    GROUP=7
    BY=8
    ORDER=9
    ASC=10
    DESC=11
    MINE=12
    WITH=13
    DISPLAY=14
    AS=15
    AND=16
    OR=17
    NOT=18
    IN=19
    BETWEEN=20
    LIKE=21
    IS=22
    TRUE=23
    FALSE=24
    NULL=25
    CLUSTER=26
    ASSOCIATION_RULES=27
    ANOMALIES=28
    ANOMALY_DETECTION=29
    STATISTICS=30
    CLASSIFICATION=31
    REGRESSION=32
    TARGET=33
    KPARAM=34
    CONFIDENCE=35
    SUPPORT=36
    LIFT=37
    THRESHOLD=38
    CONFIDENCE_LEVEL=39
    COUNT=40
    SUM=41
    AVG=42
    MIN=43
    MAX=44
    TABLE=45
    BAR_CHART=46
    LINE_CHART=47
    SCATTER_PLOT=48
    HEATMAP=49
    PIE_CHART=50
    HISTOGRAM=51
    BOX_PLOT=52
    EQ=53
    NEQ=54
    GT=55
    LT=56
    GTE=57
    LTE=58
    PLUS=59
    MINUS=60
    STAR=61
    SLASH=62
    LPAREN=63
    RPAREN=64
    COMMA=65
    DOT=66
    SEMICOLON=67
    INT=68
    FLOAT=69
    STRING=70
    IDENTIFIER=71
    WS=72
    LINE_COMMENT=73
    BLOCK_COMMENT=74

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def useClause(self):
            return self.getTypedRuleContext(DMQLParser.UseClauseContext,0)


        def fromClause(self):
            return self.getTypedRuleContext(DMQLParser.FromClauseContext,0)


        def EOF(self):
            return self.getToken(DMQLParser.EOF, 0)

        def relevanceClause(self):
            return self.getTypedRuleContext(DMQLParser.RelevanceClauseContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(DMQLParser.WhereClauseContext,0)


        def groupByClause(self):
            return self.getTypedRuleContext(DMQLParser.GroupByClauseContext,0)


        def orderByClause(self):
            return self.getTypedRuleContext(DMQLParser.OrderByClauseContext,0)


        def mineClause(self):
            return self.getTypedRuleContext(DMQLParser.MineClauseContext,0)


        def withClause(self):
            return self.getTypedRuleContext(DMQLParser.WithClauseContext,0)


        def displayClause(self):
            return self.getTypedRuleContext(DMQLParser.DisplayClauseContext,0)


        def getRuleIndex(self):
            return DMQLParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)




    def query(self):

        localctx = DMQLParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_query)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.useClause()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 75
                self.relevanceClause()


            self.state = 78
            self.fromClause()
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 79
                self.whereClause()


            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 82
                self.groupByClause()


            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 85
                self.orderByClause()


            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 88
                self.mineClause()


            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 91
                self.withClause()


            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 94
                self.displayClause()


            self.state = 97
            self.match(DMQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USE(self):
            return self.getToken(DMQLParser.USE, 0)

        def DATABASE(self):
            return self.getToken(DMQLParser.DATABASE, 0)

        def IDENTIFIER(self):
            return self.getToken(DMQLParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return DMQLParser.RULE_useClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUseClause" ):
                listener.enterUseClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUseClause" ):
                listener.exitUseClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUseClause" ):
                return visitor.visitUseClause(self)
            else:
                return visitor.visitChildren(self)




    def useClause(self):

        localctx = DMQLParser.UseClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_useClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(DMQLParser.USE)
            self.state = 100
            self.match(DMQLParser.DATABASE)
            self.state = 101
            self.match(DMQLParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelevanceClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RELEVANCE(self):
            return self.getToken(DMQLParser.RELEVANCE, 0)

        def TO(self):
            return self.getToken(DMQLParser.TO, 0)

        def attributeList(self):
            return self.getTypedRuleContext(DMQLParser.AttributeListContext,0)


        def getRuleIndex(self):
            return DMQLParser.RULE_relevanceClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelevanceClause" ):
                listener.enterRelevanceClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelevanceClause" ):
                listener.exitRelevanceClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelevanceClause" ):
                return visitor.visitRelevanceClause(self)
            else:
                return visitor.visitChildren(self)




    def relevanceClause(self):

        localctx = DMQLParser.RelevanceClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_relevanceClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(DMQLParser.RELEVANCE)
            self.state = 104
            self.match(DMQLParser.TO)
            self.state = 105
            self.attributeList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FromClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FROM(self):
            return self.getToken(DMQLParser.FROM, 0)

        def relationList(self):
            return self.getTypedRuleContext(DMQLParser.RelationListContext,0)


        def getRuleIndex(self):
            return DMQLParser.RULE_fromClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFromClause" ):
                listener.enterFromClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFromClause" ):
                listener.exitFromClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFromClause" ):
                return visitor.visitFromClause(self)
            else:
                return visitor.visitChildren(self)




    def fromClause(self):

        localctx = DMQLParser.FromClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_fromClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(DMQLParser.FROM)
            self.state = 108
            self.relationList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(DMQLParser.WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(DMQLParser.ConditionContext,0)


        def getRuleIndex(self):
            return DMQLParser.RULE_whereClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhereClause" ):
                listener.enterWhereClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhereClause" ):
                listener.exitWhereClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhereClause" ):
                return visitor.visitWhereClause(self)
            else:
                return visitor.visitChildren(self)




    def whereClause(self):

        localctx = DMQLParser.WhereClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_whereClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(DMQLParser.WHERE)
            self.state = 111
            self.condition(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GroupByClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GROUP(self):
            return self.getToken(DMQLParser.GROUP, 0)

        def BY(self):
            return self.getToken(DMQLParser.BY, 0)

        def attributeList(self):
            return self.getTypedRuleContext(DMQLParser.AttributeListContext,0)


        def getRuleIndex(self):
            return DMQLParser.RULE_groupByClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroupByClause" ):
                listener.enterGroupByClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroupByClause" ):
                listener.exitGroupByClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGroupByClause" ):
                return visitor.visitGroupByClause(self)
            else:
                return visitor.visitChildren(self)




    def groupByClause(self):

        localctx = DMQLParser.GroupByClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_groupByClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(DMQLParser.GROUP)
            self.state = 114
            self.match(DMQLParser.BY)
            self.state = 115
            self.attributeList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrderByClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ORDER(self):
            return self.getToken(DMQLParser.ORDER, 0)

        def BY(self):
            return self.getToken(DMQLParser.BY, 0)

        def orderList(self):
            return self.getTypedRuleContext(DMQLParser.OrderListContext,0)


        def getRuleIndex(self):
            return DMQLParser.RULE_orderByClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrderByClause" ):
                listener.enterOrderByClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrderByClause" ):
                listener.exitOrderByClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrderByClause" ):
                return visitor.visitOrderByClause(self)
            else:
                return visitor.visitChildren(self)




    def orderByClause(self):

        localctx = DMQLParser.OrderByClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_orderByClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(DMQLParser.ORDER)
            self.state = 118
            self.match(DMQLParser.BY)
            self.state = 119
            self.orderList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MineClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MINE(self):
            return self.getToken(DMQLParser.MINE, 0)

        def miningOperation(self):
            return self.getTypedRuleContext(DMQLParser.MiningOperationContext,0)


        def getRuleIndex(self):
            return DMQLParser.RULE_mineClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMineClause" ):
                listener.enterMineClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMineClause" ):
                listener.exitMineClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMineClause" ):
                return visitor.visitMineClause(self)
            else:
                return visitor.visitChildren(self)




    def mineClause(self):

        localctx = DMQLParser.MineClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_mineClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(DMQLParser.MINE)
            self.state = 122
            self.miningOperation()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WithClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WITH(self):
            return self.getToken(DMQLParser.WITH, 0)

        def interestMeasure(self):
            return self.getTypedRuleContext(DMQLParser.InterestMeasureContext,0)


        def getRuleIndex(self):
            return DMQLParser.RULE_withClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWithClause" ):
                listener.enterWithClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWithClause" ):
                listener.exitWithClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWithClause" ):
                return visitor.visitWithClause(self)
            else:
                return visitor.visitChildren(self)




    def withClause(self):

        localctx = DMQLParser.WithClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_withClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(DMQLParser.WITH)
            self.state = 125
            self.interestMeasure()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DisplayClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DISPLAY(self):
            return self.getToken(DMQLParser.DISPLAY, 0)

        def AS(self):
            return self.getToken(DMQLParser.AS, 0)

        def displayType(self):
            return self.getTypedRuleContext(DMQLParser.DisplayTypeContext,0)


        def getRuleIndex(self):
            return DMQLParser.RULE_displayClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDisplayClause" ):
                listener.enterDisplayClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDisplayClause" ):
                listener.exitDisplayClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDisplayClause" ):
                return visitor.visitDisplayClause(self)
            else:
                return visitor.visitChildren(self)




    def displayClause(self):

        localctx = DMQLParser.DisplayClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_displayClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(DMQLParser.DISPLAY)
            self.state = 128
            self.match(DMQLParser.AS)
            self.state = 129
            self.displayType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DMQLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(DMQLParser.AttributeContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DMQLParser.COMMA)
            else:
                return self.getToken(DMQLParser.COMMA, i)

        def getRuleIndex(self):
            return DMQLParser.RULE_attributeList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributeList" ):
                listener.enterAttributeList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributeList" ):
                listener.exitAttributeList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributeList" ):
                return visitor.visitAttributeList(self)
            else:
                return visitor.visitChildren(self)




    def attributeList(self):
